docs/examples/valid/extension/switch/defaultSwitch.wacc
begin
  int x = 2 + 5;

  switch x {
  case 4:
    println "4"
  case 5:
    println "5"
  case (1+5):
    println "6"
  default:
    println "Default"
  }

end
