docs/examples/invalid/semanticErr/switch/invalidTypeString.wacc
begin
  char[] hi = "hi";
  switch hi
		case 4:
      skip
    default:
      skip
    fi
end
